@@ -39,6 +39,7 @@ CHANGELOG Roundcube Webmail
 - Fix handling of attachments when Content-Disposition is not inline nor attachment (#1487051)
 - Improve performance of unseen messages counting (#1487058)
 - Improve performance of messages counting using ESEARCH extension (RFC4731)
+- Add LIST-STATUS support in rcube_imap_generic class (RFC5819)
 
 RELEASE 0.4.2
 -------------
